<resources>
    <string name="app_name">MyInputRMB</string>
    <string name="btn_dollar_label">dollar</string>
    <string name="btn_euro_label">euro</string>
    <string name="btn_won_label">won</string>
    <string name="btn_open_label">config</string>
    <string name="btn_save_label">save</string>
    <string name="edittext_hint">input</string>
    <string name="text_hint">0</string>
    <string name="zero">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>