<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".InputRMB_A"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input"
        android:inputType="numberDecimal"
        android:hint="@string/edittext_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text"
        android:textSize="30sp"
        android:hint="@string/text_hint"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="convert"
        android:text="@string/btn_dollar_label" />

    <Button
        android:id="@+id/euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="convert"
        android:text="@string/btn_euro_label" />

    <Button
        android:id="@+id/won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="convert"
        android:text="@string/btn_won_label" />

    <Button
        android:id="@+id/open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="open"
        android:text="@string/btn_open_label" />

</LinearLayout>